added translation to work page and button in cardheader

--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -6,5 +6,6 @@
     "services": "services",
     "contact": "contact"
   },
-  "siteStatus": "under construction"
+  "siteStatus": "under construction",
+  "goBackButton": "Go Back"
 }
