--- a/locales/pt/common.json
+++ b/locales/pt/common.json
@@ -6,5 +6,6 @@
     "services": "serviços",
     "contact": "contacto"
   },
-  "siteStatus": "em construção"
+  "siteStatus": "em construção",
+  "goBackButton": "Voltar"
 }
