--- a/locales/pt/contact.json
+++ b/locales/pt/contact.json
@@ -1,6 +1,6 @@
 {
-  "name": "Your Name",
-  "email": "Your Email",
-  "message": "Message",
-  "send": "send"
+  "name": "Seu Nome",
+  "email": "Seu Email",
+  "message": "mensagem",
+  "send": "enviar"
 }
