--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -7,5 +7,6 @@
     "contact": "contact"
   },
   "siteStatus": "under construction",
-  "goBackButton": "Go Back"
+  "goBackButton": "Go Back",
+  "404": "404 - Page Not Found"
 }
