--- a/locales/nl/common.json
+++ b/locales/nl/common.json
@@ -7,5 +7,6 @@
     "contact": "contact"
   },
   "siteStatus": "aan het bouwen",
-  "goBackButton": "Terug"
+  "goBackButton": "Terug",
+  "404": "404 - Pagina niet gevonden"
 }
