--- a/locales/pt/common.json
+++ b/locales/pt/common.json
@@ -7,5 +7,6 @@
     "contact": "contacto"
   },
   "siteStatus": "em construção",
-  "goBackButton": "Voltar"
+  "goBackButton": "Voltar",
+  "404": "404 - Página não encontrada"
 }
