--- a/todo
+++ b/todo
@@ -1,10 +1,9 @@
 Global:
   - Add Readme
   - Add animations
+  - Check the video about the buttons
   Use:
-    - https://mkosir.github.io/react-parallax-tilt/?path=/story/react-parallax-tilt--parallax-effect
     - https://reactjsexample.com/a-react-component-that-gives-your-text-a-typewriting-effect/
-    - https://reactjsexample.com/confetti-without-the-cleanup/
 
   Add translation:
   - check https://www.youtube.com/redirect?redir_token=QUFFLUhqa1pTMWk4OHluOXU1Rk80UHlvZHJFdW16UGpKUXxBQ3Jtc0trVTlSMUxEWWZsSDFfU2JMV0o3MVY2RWNWWWVtckRXUzk5eHVybVVEUFI0elZaYXFTMHpPNEI3TlNJTC0xZUN0RGhseFJUcTloNDVQZUhHRVlCYTdFdFROMVVJeVM0TWtIUWMzX1hlTE1qV0x0WmNFTQ%3D%3D&v=Rbi52ZYtVKM&q=https%3A%2F%2Fdevelopers.google.com%2Fsearch%2Fdocs%2Fadvanced%2Fcrawling%2Flocalized-versions%3Fvisit_id%3D637421907601920248-2806527001%26rd%3D1&event=video_description
@@ -14,11 +13,7 @@ Global:
       - Add link to full image
       - Add more details about de project
       - Ajust CardWork to full size
-    Speech:
-      - Add abort button
   Pages:
-    - Add work item full image to be seen
-    Index:
     Work:
       - Add this portfolio also
     About:
