removed paralax tilt effect

--- a/todo
+++ b/todo
@@ -1,9 +1,8 @@
 Global:
   - Add Readme
   - Add animations
-  Use:
-    - https://www.youtube.com/watch?v=zIDpZi-36Qs
-  Add translation:
+
+  AddTranslation:
   - check https://www.youtube.com/redirect?redir_token=QUFFLUhqa1pTMWk4OHluOXU1Rk80UHlvZHJFdW16UGpKUXxBQ3Jtc0trVTlSMUxEWWZsSDFfU2JMV0o3MVY2RWNWWWVtckRXUzk5eHVybVVEUFI0elZaYXFTMHpPNEI3TlNJTC0xZUN0RGhseFJUcTloNDVQZUhHRVlCYTdFdFROMVVJeVM0TWtIUWMzX1hlTE1qV0x0WmNFTQ%3D%3D&v=Rbi52ZYtVKM&q=https%3A%2F%2Fdevelopers.google.com%2Fsearch%2Fdocs%2Fadvanced%2Fcrawling%2Flocalized-versions%3Fvisit_id%3D637421907601920248-2806527001%26rd%3D1&event=video_description
   Components:
     CardWork:
@@ -21,3 +20,5 @@ Global:
       - Add certifications
     Contact:
       - Adjust layout om small screens
+    Use:
+      - https://www.youtube.com/watch?v=zIDpZi-36Qs
