--- a/todo
+++ b/todo
@@ -13,5 +13,7 @@ Global:
     Use:
       - https://www.youtube.com/watch?v=zIDpZi-36Qs
       -
+  Components:
+    - Uncomment SpeechBrowser support
 
-https://play.tailwindcss.com/8yyTOLM4kq?size=1758x1069
+https://play.tailwindcss.com/2ZqJWOKFZ6?size=808x915
